@@ -10,3 +10,5 @@
 #pragma once
 
 #include <openrct2/interface/Widget.h>
+
+uint32_t GetColourButtonImage(colour_t colour);
