@@ -1,6 +1,7 @@
 0.3.2+ (in development)
 ------------------------------------------------------------------------
 - Feature: [#13057] Make GameAction flags accessible by plugins.
+- Feature: [#13078] [Plugin] Add colour picker widget.
 - Feature: [#13376] Open custom window at specified tab.
 - Feature: [#13398] Add pause button to the Track Designer.
 - Feature: [#13495] [Plugin] Add properties for park value, guests and company value.
